# md

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/md/: __init__.py  __main__.py
