# -----------------------------------------------------------------------------
# Build System
# -----------------------------------------------------------------------------

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# -----------------------------------------------------------------------------
# Entry Points
# -----------------------------------------------------------------------------

[project.scripts]
md = "md.__main__:main"

[project.gui-scripts]
md = "md.__main__:main"

[project.entry-points."uvx.run"]
md = "md.__main__:main"

[project.entry-points."pipx.run"]
md = "md.__main__:main"

# -----------------------------------------------------------------------------
# Project Metadata
# -----------------------------------------------------------------------------

[project]
name = "md"
readme = "README.md"
version = "0.1.0.dev1"
license = "Apache-2.0 OR MIT"
authors = [{ name = "Sagi Kimhi", email = "sagi.kim5@gmail.com" }]
maintainers = [{ name = "Sagi Kimhi", email = "sagi.kim5@gmail.com" }]
description = "Markdown editor with live preview (built with Textual)."
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "textual[syntax]",
    "textual-filedrop",
    "textual-speedups",
    "textual-fspicker",
]

[project.urls]
Home = "https://github.com/sagikimhi/md"
Issues = "https://github.com/sagikimhi/md/issues"

[dependency-groups]
dev = [
    "ruff",
    "twine",
    "build",
    "hatch",
    "pytest",
    "pre-commit",
    "pytest-cov",
    "pydocstyle",
    "pycodestyle",
    "textual-dev",
    "basedpyright",
    "flake8-bugbear",
    "flake8-simplify",
    "pandoc>=2.4",
]

# -----------------------------------------------------------------------------
# Tool Configurations
# -----------------------------------------------------------------------------

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/md"]
